syntax = "proto3";

package services.notificator;
option go_package = "github.com/galexrt/fivenet/proto/services/notificator;notificator";

import "resources/common/database/database.proto";
import "resources/notifications/notifications.proto";
import "validate/validate.proto";

message GetNotificationsRequest {
  resources.common.database.PaginationRequest pagination = 1 [(validate.rules).message.required = true];
  bool include_read = 2;
}

message GetNotificationsResponse {
  resources.common.database.PaginationResponse pagination = 1;
  repeated resources.notifications.Notification notifications = 2;
}

message ReadNotificationsRequest {
  repeated uint64 ids = 1 [(validate.rules).repeated = {min_items: 1, max_items: 20}];
}

message ReadNotificationsResponse {}

message StreamRequest {
  uint64 last_id = 1;
}

message StreamResponse {
  uint64 last_id = 1;
  repeated resources.notifications.Notification notifications = 2;
}

service NotificatorService {
  // @perm: description="Being able list their own notifications"
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  // @perm: name=GetNotifications
  rpc ReadNotifications(ReadNotificationsRequest) returns (ReadNotificationsResponse);

  // @perm: name=GetNotifications;description="Being able to receive notifications"
  rpc Stream(StreamRequest) returns (stream StreamResponse);
}
